--- a/app/src/main/res/layout/activity_fun_facts.xml
+++ b/app/src/main/res/layout/activity_fun_facts.xml
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#51b46d"
+        android:padding="50dp"
+        android:id="@+id/RelativeLayout"
         tools:context=".FunFactsActivity">
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:text="Did you know?"
+            android:textSize="24sp" android:textColor="#80ffffff"/>
+    <TextView
+            android:text="Ants stretch in the morning."
+            android:textSize="24sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_alignParentStart="true"
+            android:layout_marginStart="2dp" android:layout_alignParentLeft="true"
+            android:id="@+id/factTextView"
+            android:layout_marginLeft="2dp" android:layout_centerVertical="true"/>
+    <Button
+            android:text="Another Fun Fact"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true" android:id="@+id/showFactButton" android:textColor="#51b46d"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
